--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_modular: ^5.0.3
   flutter_triple: ^1.2.7+4
   battery_indicator: ^0.1.1
-  onesignal_flutter: ^3.3.2
+  flutter_local_notifications: ^9.7.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
