--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - icons/
+    - lib/app/core/notifications_icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
